[gd_scene format=3 uid="uid://cfet5sbv57peb"]

[ext_resource type="Script" uid="uid://cgech4ds042xy" path="res://scripts/MobileControls.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dj8aq"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro3t7"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5en4g"]
size = Vector2(140, 140)

[node name="UI" type="CanvasLayer" unique_id=1460182622]
process_mode = 3
script = ExtResource("1")

[node name="HUD" type="MarginContainer" parent="." unique_id=639381212]
offset_right = 720.0
offset_bottom = 220.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD" unique_id=1150421848]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HUD/VBoxContainer" unique_id=1050150733]
layout_mode = 2
text = "Score: 0"

[node name="LevelLabel" type="Label" parent="HUD/VBoxContainer" unique_id=631206471]
layout_mode = 2
text = "Level: 1"

[node name="StarsLabel" type="Label" parent="HUD/VBoxContainer" unique_id=1301369343]
layout_mode = 2
text = "Stars: 0"

[node name="LifeLabel" type="Label" parent="HUD/VBoxContainer" unique_id=935100001]
layout_mode = 2
text = "LIFE: 5/5"

[node name="StartScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="StartScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.72)

[node name="Panel" type="Panel" parent="StartScreen"]
custom_minimum_size = Vector2(580, 520)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -260.0
offset_right = 290.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -210.0
offset_right = 250.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="TitleLabel" type="Label" parent="StartScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.102, 0.949, 0.988, 1)
theme_override_colors/font_shadow_color = Color(0.102, 0.949, 0.988, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 72
horizontal_alignment = 1
text = "ROAD TO MARS"

[node name="InstructionLabel" type="Label" parent="StartScreen/Panel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3
horizontal_alignment = 1
text = "Use LEFT/RIGHT or A/D to move. Press SPACE to shoot."

[node name="StartButton" type="Button" parent="StartScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(360, 120)
layout_mode = 2
size_flags_horizontal = 4
text = "START GAME"

[node name="GameOverScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75)

[node name="Panel" type="Panel" parent="GameOverScreen"]
custom_minimum_size = Vector2(560, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -250.0
offset_right = 280.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -190.0
offset_right = 230.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="GameOverLabel" type="Label" parent="GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
text = "GAME OVER"

[node name="FinalScoreLabel" type="Label" parent="GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Final Score: 0"

[node name="FinalStarsLabel" type="Label" parent="GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Stars Collected: 0"

[node name="RestartButton" type="Button" parent="GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(360, 120)
layout_mode = 2
size_flags_horizontal = 4
text = "RESTART"

[node name="VirtualControls" type="Control" parent="." unique_id=609820518]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftButton" type="TouchScreenButton" parent="VirtualControls" unique_id=1226494135]
position = Vector2(40, 1120)
shape = SubResource("RectangleShape2D_dj8aq")
action = "move_left"

[node name="RightButton" type="TouchScreenButton" parent="VirtualControls" unique_id=1255776302]
position = Vector2(170, 1120)
shape = SubResource("RectangleShape2D_ro3t7")
action = "move_right"

[node name="ShootButton" type="TouchScreenButton" parent="VirtualControls" unique_id=521307770]
position = Vector2(600, 1120)
shape = SubResource("RectangleShape2D_5en4g")
action = "shoot"
